# trmnl-rs

./: .gitignore  Cargo.toml  Dockerfile  readme.md
src/: env.example  main weather.rs  main.rs  main_4weeks.rs  main_enhanced.rs  main_weather_week.rs  main_weather_week_2.rs
