[package]
name = "trmnl-rs"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "trmnl-display"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json","query","form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
imageproc = "0.26.0"
# rusttype = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["trace"] }
ab_glyph="*"